# jarvis

./: .pre-commit-config.yaml  CLAUDE.md  README.md  install.sh  pyproject.toml
docs/: llm-setup.md  menubar-setup.md  stt-setup.md  tts-setup.md  voice-setup.md
launchd/: com.jarvis.menubar.plist  com.jarvis.voice.plist  com.kokoro.server.plist  com.openwebui.plist  com.tts.narrate.plist  com.whisper.dictate.plist  com.whisper.server.plist
menubar/: app.py  chat.py  generate_plists.py  health.py  inactivity.py  memory.py  services.py  setup.sh
scripts/: jarvis-chat.py  jarvis-status.py  jarvis-voice.py  jarvis_config.py  jarvis_log.py  kokoro-server.py  llm_client.py  tts-narrate.py  tts-router.py  tts-speak.py  whisper-dictate.py
tasks/: MENUBAR_PLAN.md  radiant-drifting-frost.md
tests/: conftest.py  test_config.py  test_jarvis_chat.py  test_jarvis_log.py  test_jarvis_status.py  test_jarvis_voice.py  test_kokoro_server.py  test_llm_client.py  test_menubar_chat.py  test_menubar_health.py  test_menubar_inactivity.py  test_menubar_memory.py  test_menubar_services.py  test_tts_narrate.py  test_tts_router.py  test_whisper_dictate.py
